src/cli/snapshots/steward_core__cli__tests__long_help_output.snap
---
source: src/cli/mod.rs
expression: help
---
Steward local runtime commands.
Examples:
  steward run
  steward config list

Usage: steward [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  desktop     Launch desktop app
  config      Manage app configs
  tool        Manage WASM tools
  registry    Browse/install extensions
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics
  status      Show system status
  completion  Generate completions
  import      Import from other AI systems
  login       Authenticate with a provider
  help        Print this message or the help of the given subcommand(s)

Options:
      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
